--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,3 +1,7 @@
+{% extends 'base.html'%}
+
+{% block content %}
+
 <h1>
     Delete Post
 </h1>
@@ -8,3 +12,5 @@
     </p>
     <button type='submit'>Delete</button>
 </form>
+
+{% endblock content%}
