--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,3 +1,7 @@
+{% extends 'base.html'%}
+
+{% block content %}
+
 <h1>
     Edit Post
 </h1>
@@ -6,3 +10,5 @@
     {{ form.as_p }}
     <button type='submit'>Save</button>
 </form>
+
+{% endblock content%}
