--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,6 @@
+{% extends 'base.html'%}
+
+{% block content %}
 <h2>
     Login
 </h2>
@@ -6,3 +9,5 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+
+{% endblock content%}
