--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,7 @@
+{% extends 'base.html'%}
+
+{% block content %}
+
 <h2>
     Sign up
 </h2>
@@ -6,3 +10,5 @@
     {{ form.as_p }}
     <button type="submit">Sign up</button>
 </form>
+
+{% endblock content%}
